# RedditETL

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
dags/: reddit_dag.py
data/output/: reddit_20231121.csv
etls/: aws_etl.py  reddit_etl.py
pipelines/: aws_s3_pipeline.py  reddit_pipeline.py
utils/: constants.py
