[tool.poetry]
name = "reddit-etl"
version = "1.0.0"
description = "Reddit ETL Pipeline using Apache Airflow"
authors = ["Suphakit Suphapinyo"]
readme = "README.md"
packages = [{include = "pipelines"}, {include = "utils"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
apache-airflow = "^3.1.5"
apache-airflow-providers-amazon = "^8.0.0"
apache-airflow-providers-fab = "^3.0.2"
praw = "^7.8.1"
pandas = "^2.2.0"
s3fs = "^2024.0.0"
numpy = "^1.26.0"
# Security: urllib3 2.6.2 and flask-appbuilder 5.0.1 are satisfied by Airflow 3.1.5
# Note: Werkzeug 2.2.3 vulnerability - see comment below
cryptography = "44.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^25.11.0"
flake8 = "^7.0.0"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false